Doctor revenue added
